--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/nandadomenicali/starwars#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "eslint-friendly-formatter": "^4.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "prettier": "^2.6.2"
   },
   "devDependencies": {
-    "eslint": "^8.15.0"
+    "eslint": "^8.15.0",
+    "husky": "^8.0.1"
   }
 }
